--- a/backend/.env.example
+++ b/backend/.env.example
@@ -24,8 +24,8 @@ GEMINI_MODEL=gemini-1.5-flash
 OPENAI_MODEL=gpt-4o-mini
 ANTHROPIC_MODEL=claude-3-haiku-20240307
 
-# Your Identity
-BOT_NAME=YourName
+# Your Identity - THIS IS WHO THE BOT BECOMES
+BOT_NAME=Chirag
 USER_NAME=User
 
 # Social Autopilot (optional)
