--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
-# Docker Compose for Chirag Clone
-version: '3.8'
+# Docker Compose for Chirag Clone v2.0
+# FastAPI backend + React frontend
 
 services:
   chirag-clone:
@@ -8,7 +8,7 @@ services:
       dockerfile: Dockerfile
     container_name: chirag-clone
     ports:
-      - "5000:5000"
+      - "8000:8000"
     environment:
       - GEMINI_API_KEY=${GEMINI_API_KEY}
       - BOT_NAME=${BOT_NAME:-Chirag}
@@ -18,7 +18,7 @@ services:
       - chirag_data:/app/backend/data
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:5000/api/health')"]
+      test: [ "CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/api/health')" ]
       interval: 30s
       timeout: 10s
       retries: 3
