--- a/backend/.env.example
+++ b/backend/.env.example
@@ -34,3 +34,7 @@ DISCORD_BOT_TOKEN=
 
 # Telegram: Create bot via @BotFather on Telegram
 TELEGRAM_BOT_TOKEN=
+
+# Training Center Security
+TRAINING_PASSCODE=1234
+
