--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     container_name: chirag-clone
     ports:
       - "8000:8000"
+    env_file:
+      - .env
     environment:
       - GEMINI_API_KEY=${GEMINI_API_KEY}
       - BOT_NAME=${BOT_NAME:-Chirag}
