--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,19 @@ TELEGRAM_BOT_TOKEN=
 # Training Center Security
 TRAINING_PASSCODE=1234
 
+# Twitter/X Autopilot (optional)
+# Create app at https://developer.twitter.com/en/portal/dashboard
+TWITTER_CLIENT_ID=
+TWITTER_CLIENT_SECRET=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_TOKEN_SECRET=
+
+# LinkedIn Autopilot (optional - uses unofficial API)
+# Uses your LinkedIn email/password
+LINKEDIN_EMAIL=
+LINKEDIN_PASSWORD=
+
+# Gmail Autopilot (optional)
+# Create OAuth credentials at https://console.cloud.google.com/apis/credentials
+GMAIL_CLIENT_ID=
+GMAIL_CLIENT_SECRET=
