--- a/requirements.txt
+++ b/requirements.txt
@@ -142,3 +142,8 @@ Werkzeug==3.0.1
 wrapt==1.17.3
 wsproto==1.3.2
 zipp==3.23.0
+
+# New autopilot integrations
+tweepy>=4.14.0
+linkedin-api>=2.0.0
+google-auth-oauthlib>=1.0.0
