--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,18 @@ LINKEDIN_PASSWORD=
 # Create OAuth credentials at https://console.cloud.google.com/apis/credentials
 GMAIL_CLIENT_ID=
 GMAIL_CLIENT_SECRET=
+
+# Voice (optional)
+# ElevenLabs: https://elevenlabs.io/
+ELEVENLABS_API_KEY=
+ELEVENLABS_VOICE_ID=
+
+# Google Calendar (optional - can reuse Gmail credentials)
+GOOGLE_CALENDAR_CLIENT_ID=
+GOOGLE_CALENDAR_CLIENT_SECRET=
+
+# WhatsApp Business API (optional)
+# https://developers.facebook.com/docs/whatsapp/business
+WHATSAPP_PHONE_NUMBER_ID=
+WHATSAPP_ACCESS_TOKEN=
+WHATSAPP_WEBHOOK_VERIFY_TOKEN=
