--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,6 @@ GOOGLE_CALENDAR_CLIENT_SECRET=
 WHATSAPP_PHONE_NUMBER_ID=
 WHATSAPP_ACCESS_TOKEN=
 WHATSAPP_WEBHOOK_VERIFY_TOKEN=
+
+# Vision (Desktop Eye Mode)
+GEMINI_VISION_ENABLED=true
