--- a/requirements.txt
+++ b/requirements.txt
@@ -147,3 +147,8 @@ zipp==3.23.0
 tweepy>=4.14.0
 linkedin-api>=2.0.0
 google-auth-oauthlib>=1.0.0
+
+# Brain Station / Knowledge Management
+aiohttp>=3.9.0
+beautifulsoup4>=4.12.0
+lxml>=5.0.0
