--- a/requirements.txt
+++ b/requirements.txt
@@ -152,3 +152,10 @@ google-auth-oauthlib>=1.0.0
 aiohttp>=3.9.0
 beautifulsoup4>=4.12.0
 lxml>=5.0.0
+
+# Performance Monitoring
+psutil>=5.9.0
+
+# Uvicorn Production Performance
+uvloop>=0.19.0; sys_platform != 'win32'
+httptools>=0.6.0
