--- a/.env.example
+++ b/.env.example
@@ -69,3 +69,18 @@ WHATSAPP_WEBHOOK_VERIFY_TOKEN=
 
 # Vision (Desktop Eye Mode)
 GEMINI_VISION_ENABLED=true
+
+# OAuth2 / Social Login (v2.6)
+# Google: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+# GitHub: https://github.com/settings/applications/new
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+# Security
+# Run `openssl rand -hex 32` to generate
+JWT_SECRET=your-secure-jwt-secret
+# Comma-separated list of emails allowed to access training center
+ALLOWED_ADMIN_EMAILS=chiragns12@gmail.com
