--- a/requirements.txt
+++ b/requirements.txt
@@ -167,3 +167,9 @@ piper-tts>=1.2.0
 # Image processing for Rewind feature
 Pillow>=10.0.0
 
+# OAuth2 Authentication (v2.6)
+PyJWT>=2.8.0
+authlib>=1.3.0
+
+# Voice Activity Detection (v2.6)
+webrtcvad>=2.0.10
