--- a/.env.example
+++ b/.env.example
@@ -70,14 +70,10 @@ WHATSAPP_WEBHOOK_VERIFY_TOKEN=
 # Vision (Desktop Eye Mode)
 GEMINI_VISION_ENABLED=true
 
-# OAuth2 / Social Login (v2.6)
+# OAuth2 / Google Login (v2.6)
 # Google: https://console.cloud.google.com/apis/credentials
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-
-# GitHub: https://github.com/settings/applications/new
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
 
 # Security
 # Run `openssl rand -hex 32` to generate
