--- a/requirements.txt
+++ b/requirements.txt
@@ -97,6 +97,8 @@ PyPika==0.48.9
 pyproject_hooks==1.2.0
 pyreadline3==3.5.4
 pytest==9.0.2
+pytest-asyncio==0.23.5
+pytest-cov==4.1.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-engineio==4.13.0
