--- a/.env.example
+++ b/.env.example
@@ -80,3 +80,28 @@ GOOGLE_CLIENT_SECRET=
 JWT_SECRET=your-secure-jwt-secret
 # Comma-separated list of emails allowed to access training center
 ALLOWED_ADMIN_EMAILS=chiragns12@gmail.com
+
+# ============= Local Training Settings =============
+# Enable/disable local training capabilities
+LOCAL_TRAINING_ENABLED=true
+
+# Directory for trained LoRA adapters
+LOCAL_ADAPTERS_DIR=./adapters
+
+# Directory for downloaded base models
+LOCAL_MODELS_DIR=./models
+
+# Default base model for training (Unsloth optimized recommended)
+DEFAULT_BASE_MODEL=unsloth/phi-2-bnb-4bit
+
+# GPU memory fraction to use (0.0-1.0)
+GPU_MEMORY_FRACTION=0.9
+
+# Default LoRA hyperparameters
+DEFAULT_LORA_R=16
+DEFAULT_LORA_ALPHA=32
+DEFAULT_MAX_SEQ_LENGTH=2048
+
+# WandB for experiment tracking (optional)
+WANDB_API_KEY=
+WANDB_PROJECT=chirag-clone-training
