--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ annotated-types==0.7.0
 anthropic==0.8.1
 anyio==4.12.0
 APScheduler==3.11.2
+orjson>=3.9.0
 asgiref==3.11.0
 backoff==2.2.1
 bcrypt==5.0.0
