--- a/requirements.txt
+++ b/requirements.txt
@@ -89,7 +89,8 @@ PyPika==0.48.9
 pyproject_hooks==1.2.0
 pyreadline3==3.5.4
 pytest
-pytest-asyncio
+pytest-asyncio>=0.23.0
+pytest-cov
 pytest-cov
 python-dateutil==2.8.2
 python-dotenv==1.0.0
@@ -184,3 +185,10 @@ slack-sdk>=3.20.0
 # Wake Word (Disabled on Python 3.14 due to onnxruntime incompatibility)
 # openwakeword>=0.5.0
 # onnxruntime>=1.16.0
+
+# v3.1.0 Features (Multimodal, RBAC, OTel, Testing)
+ollama>=0.1.6
+mutmut>=2.4.4
+opentelemetry-api>=1.20.0
+opentelemetry-sdk>=1.20.0
+opentelemetry-instrumentation-fastapi>=0.40b0
